# django-hidp-wagtail

./: .gitignore  LICENSE  Makefile  README.md  compose.yaml  docker-compose.yml  pyproject.toml  requirements_dev.txt
.github/: CODEOWNERS  dependabot.yml
.github/actions/python-qa/: action.yml
.github/workflows/: labeler.yml  release-drafter.yml  release.yml  test.yml
hidp_wagtail/: __init__.py  apps.py  checks.py  urls.py  wagtail_hooks.py
hidp_wagtail/static/css/: wagtail_hidp.css  wagtail_hidp_pre_login.css
hidp_wagtail/templates/hidp/: base.html  base_post_login.html
project/: .cruft.json  .dockerignore  Dockerfile  Makefile  README.md  manage.py  pyproject.toml  requirements.txt  requirements_local.txt
project/.github/: CODEOWNERS  dependabot.yml  labeler.yml
project/.github/actions/backend/: action.yml
project/.github/workflows/: cruft-update.yml  labeler.yml  release.yml  test.yml
project/backend/: Dockerfile  Makefile  entrypoint.sh  gdpr.yml  requirements.txt
project/backend/hidp_wagtail_sandbox/: local.example.ini  settings.py
project/backend/hidp_wagtail_sandbox/accounts/: models.py
project/backend/tests/: test_settings.py
project/docker/: README.md
project/frontend/: README.md
project/frontend/templates/: base.html
project/git-hooks/: pre-commit.sh
project/hidp_wagtail_sandbox/: asgi.py  context_processors.py  local.example.ini  settings.py  urls.py  wsgi.py
project/hidp_wagtail_sandbox/accounts/: admin.py
project/hidp_wagtail_sandbox/storage/: staticfiles.py
var/: README.md  requirements_frozen.txt
var/public/: README.md
(+12 files in other folders)
